<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ActLogin" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearInput"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginRight="@dimen/margin_10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_white_grayborder"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="@dimen/margin_5dp"
            android:singleLine="true"
            android:text=""
            android:hint="@string/login_username"
            android:padding="@dimen/margin_10dp" />

        <EditText
            android:id="@+id/login_editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text=""
            android:singleLine="true"
            android:inputType="textPassword"
            android:background="@drawable/round_white_grayborder"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/margin_5dp"
            android:hint="@string/login_password"
            android:padding="@dimen/margin_10dp" />

        <Button
            android:id="@+id/login_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:background="@drawable/round_blue"
            android:padding="@dimen/margin_10dp"
            android:text="@string/login_login"
            android:textColor="@color/white"
            android:textSize="@dimen/font_20dp" />
    </LinearLayout>

</RelativeLayout>